--- a/index.html
+++ b/index.html
@@ -185,31 +185,31 @@
                 </div>
                 <div class="workProjectsImages">
                     <div class="portfolio-item btn" data-project="project1">
-                        <img src="myWorksImgs/furniture.png" alt="">
+                        <img src="MyWorksImgs/furniture.png" alt="">
                         <p>Abiosa furniture website UI/UX caseStudy</p>
                     </div>
                     <div class="portfolio-item btn" data-project="project2">
-                        <img src="myWorksImgs/prime.png" alt="">
+                        <img src="MyWorksImgs/prime.png" alt="">
                         <p>UI/UX case study for E-commerce app</p>
                     </div>
                     <div class="portfolio-item btn" data-project="project3">
-                        <img src="myWorksImgs/gaming.png" alt="">
+                        <img src="MyWorksImgs/gaming.png" alt="">
                         <p>UI for Fox Gaming Market</p>
                     </div>
                     <div class="portfolio-item btn" data-project="project4">
-                        <img src="myWorksImgs/gym.png" alt="">
+                        <img src="MyWorksImgs/gym.png" alt="">
                         <p>UI/UX for Gym Website</p>
                     </div>
                     <div class="portfolio-item btn" data-project="project5">
-                        <img src="myWorksImgs/eTeaching.png" alt="">
+                        <img src="MyWorksImgs/eTeaching.png" alt="">
                         <p>UI for E-teaching</p>
                     </div>
                     <div class="portfolio-item btn" data-project="project6">
-                        <img src="myWorksImgs/musicHome.png" alt="">
+                        <img src="MyWorksImgs/musicHome.png" alt="">
                         <p>UI/UX for Music application</p>
                     </div>
                     <div class="portfolio-item btn" data-project="project7">
-                        <img src="myWorksImgs/cybersecurity.png" alt="">
+                        <img src="MyWorksImgs/cybersecurity.png" alt="">
                         <p>UI for cyber security website</p>
                     </div>
                 </div>
