--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
                     <p>A small gallery of recent UI/UX projects for different companies and organizations</p>
                 </div>
                 <div class="workProjectsBtns">
-                    <button class="allProjectsBtn btn" style="background-color: rgb(253, 173, 0); 
-                                                        color: #222222;
-                                                        border-color: rgb(253, 173, 0);">
+                    <button class="allProjectsBtn btn">
                         All Projects
                     </button>
 
@@ -184,31 +182,31 @@
                     </button>
                 </div>
                 <div class="workProjectsImages">
-                    <div class="portfolio-item btn" data-project="project1">
-                        <img src="MyWorksImgs/furniture.png" alt="">
+                    <div class="portfolio-item btn uxProject" data-project="project1">
+                        <img src="myWorksImgs/furniture.png" alt="">
                         <p>Abiosa furniture website UI/UX caseStudy</p>
                     </div>
-                    <div class="portfolio-item btn" data-project="project2">
+                    <div class="portfolio-item btn uxProject" data-project="project2">
                         <img src="MyWorksImgs/prime.png" alt="">
                         <p>UI/UX case study for E-commerce app</p>
                     </div>
-                    <div class="portfolio-item btn" data-project="project3">
+                    <div class="portfolio-item btn uiProject" data-project="project3">
                         <img src="MyWorksImgs/gaming.png" alt="">
                         <p>UI for Fox Gaming Market</p>
                     </div>
-                    <div class="portfolio-item btn" data-project="project4">
+                    <div class="portfolio-item btn uxProject" data-project="project4">
                         <img src="MyWorksImgs/gym.png" alt="">
                         <p>UI/UX for Gym Website</p>
                     </div>
-                    <div class="portfolio-item btn" data-project="project5">
+                    <div class="portfolio-item btn uiProject" data-project="project5">
                         <img src="MyWorksImgs/eTeaching.png" alt="">
                         <p>UI for E-teaching</p>
                     </div>
-                    <div class="portfolio-item btn" data-project="project6">
+                    <div class="portfolio-item btn uxProject" data-project="project6">
                         <img src="MyWorksImgs/musicHome.png" alt="">
                         <p>UI/UX for Music application</p>
                     </div>
-                    <div class="portfolio-item btn" data-project="project7">
+                    <div class="portfolio-item btn uiProject" data-project="project7">
                         <img src="MyWorksImgs/cybersecurity.png" alt="">
                         <p>UI for cyber security website</p>
                     </div>
