--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="workProjectsImages">
                     <div class="portfolio-item btn uxProject" data-project="project1">
-                        <img src="myWorksImgs/furniture.png" alt="">
+                        <img src="MyWorksImgs/furniture.png" alt="">
                         <p>Abiosa furniture website UI/UX caseStudy</p>
                     </div>
                     <div class="portfolio-item btn uxProject" data-project="project2">
