--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </nav>
             <div class="contact">
                 <img src="hero graphics/envelop.svg" alt="">
-                <a href="Contact">Contact</a>
+                <a href="#Contact">Contact</a>
             </div>
         </header>
         <div class="menuBox">
