--- a/index.html
+++ b/index.html
@@ -226,22 +226,22 @@
                     </div>
                 </div>
             </section>
-            <section class="contactSection" id="Contact">
+            <form class="contactSection" id="Contact" action="https://formspree.io/f/mwpkrzkr" method="post">
                 <div class="contactTextAnimation">
                     <h1 class="contatcAnimation">Contact to start!</h1>
                 </div>
                 <div class="contactText">
                     <div class="emailContainer">
                         <label for="email">Email Address </label>
-                        <input type="email" id="email" title="Your Email">
+                        <input type="email" id="email" name="email" title="Your Email" required>
                     </div>
                     <div class="messageContainer">
                         <label for="message">Your Message </label>
-                        <textarea name="message" id="message"></textarea>
+                        <textarea name="message" name="message" id="message" title="Your Message" required></textarea>
                     </div>
                     <button type="submit" class="btn">Submit Message</button>
                 </div>
-            </section>
+            </form>
             <div class="rights">
                 <p>John Designs © 2024. All rights reserved</p>
             </div>
