--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="homeSectionText">
                     <h1>Hi, I'm John Mohsen</h1>
                     <h2 style="font-weight: 300;">UI/UX Designer & Graphic Designer</h2>
-                    <p>I'm John Mohsen a passionate Graphic and UI/UX Designer
+                    <p>I'm John Mohsen a passionate UI/UX and Graphic Designer
                         with huge experience. Strong experience in Figma,Adobe Creative Suits
                         and creating compelling and user friendly social media content.
                         I'm eager to develop cutting-edge entertainment that resonates with users.
@@ -112,8 +112,8 @@
                 </div>
                 <div class="aboutSectionText">
                     <h1>About Me</h1>
-                    <p>I’m John Mohsen, a senior Graphic Designer  with extensive experience in attractive Designs.
-                        I am very keen to give my clients a real value, and looking forward to build a long term relationship,
+                    <p>I’m John Mohsen, a Ui/UX & Graphic Designer  with extensive experience in functional, user friendly and attractive Designs.
+                        I am very keen to give my clients a real value, and I am looking forward to build a long term relationship,
                         I’ve been lucky enough to establish relationship with amazing clients, ranging from individual clients,
                         to up-and-coming startups.</p>
                     <div class="analysis">
